# telegram_scraper

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
config/: config-prod.yaml  logger.yaml
src/app/: config.py  main.py  models.py  scraper.py  utils.py
